# Moodle_VirtualAssistant_BE

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  api.http  api_localhost.http  api_test.http  data.txt  deploy.sh  docker-compose.yml  init.sql  nohup.out  pyproject.toml  requirements.txt  test.py  test.txt
.github/workflows/: deploy.yml
app/: main.py
app/api/api_v0/: api.py
app/api/api_v0/endpoints/: api_healthcheck.py  message_api.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: api_healthcheck.py  message_api.py  task_api.py  update_document_api.py
app/api/api_v1/services/: chat_service.py
app/api/api_v2/: api.py
app/api/api_v2/endpoints/: api_healthcheck.py  auth_api.py  message_api.py  reminder_api.py  update_document_api.py
app/chatbot/: model.py  prompt.py  root.py  schema.py  tool_chat.py  tools.py
app/chatbot/adviceBot/: main.py
app/chatbot/querybot/: main.py  sql2.txt  sql_improve.txt  sql_improve_old.txt  table_info.py
app/chatbot/ragBot/: data.py  main.py  new.txt  pgData.py  test.py
app/chatbot/talkbot/: main.py
app/chatbot/taskbot/: bot.py  main.py  reminder.py  test.py
app/core/: config.py
app/db/: db.py
app/helpers/: exception_handler.py
app/models/: base_model.py  message_model.py  message_model_json.py  reminder_model.py  user_model.py
app/schemas/: sche_base.py
app/services/: advice_service.py  auth_service.py  chat_service.py  context_service.py  label_service.py  schedule.py
midgration/: env.py
midgration/versions/: 3c1a4fd3b8ff_add_page.py  42a21a495eb0_label_table.py  4d08341b5953_change_enrol_name.py  51e52e182426_label_column.py  6bef2fa4b833_page_vi.py  82005978cce3_change_enrol_table.py  8921633bf080_label1_table.py  b7e881a36e06_page_vi_1.py  b8e45d0ee130_init_table.py  bfd4f2170fcd_adjust_assign_again.py  d3de43b2e142_add_message_table.py  e051347b3acf_page_adjust.py  f86a3a02e852_adjust_assign.py
migration/versions/: 0be0cb4c1fcb_reminder_table.py  36f96db9aeb1_reminder_adjust.py  6504b576618e_reminder_delete_enum.py
