[tool.poetry]
name = "moodle_virtualassistant_be"
version = "0.1.0"
description = ""
authors = ["chacachien <nguyentienphatbl123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

fastapi = "0.110.2"
uvicorn = "0.29.0"
alembic = "1.13.1"
sqlmodel = "0.0.16"
sqlalchemy = "2.0.29"
databases = "0.9.0"
mysql-connector-python = "8.3.0"
python-dotenv = "1.0.1"

pydantic = "^2.7.4"

pytz = "2024.1"
transformers = "^4.44.2"

pinecone-client = "^5.0.0"
sentence-transformers = "2.6.1"
starlette = "^0.37.2"

pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"

psycopg2-binary = "^2.9.9"
bs4 = "^0.0.2"
fastapi-sqlalchemy = "^0.2.1"
aiomysql = "^0.2.0"
schedule = "^1.2.1"
passlib = "^1.7.4"
jose = "^1.0.0"

langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchain-core = "^0.2.34"
langchain-groq = "^0.1.9"
langchain-google-genai = "^1.0.2"
langchain-openai = "^0.1.3"
langchain-pinecone = "^0.1.3"
langchain-huggingface = "^0.0.3"
pyvi = "^0.1.1"
fastapi-utils = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
